final code update

--- a/package.json
+++ b/package.json
@@ -4,22 +4,15 @@
   "description": "Empower Your Workforce with ElevateHR: Streamlining Efficiency, Elevating Performance.",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DAsh365/ElevateHR---Empower-Your-Workforce"
+     "test": "npm test"
   },
   "author": "Devan Ash",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/DAsh365/ElevateHR---Empower-Your-Workforce/issues"
-  },
-  "homepage": "https://github.com/DAsh365/ElevateHR---Empower-Your-Workforce/blob/main/README.md",
-  "dependencies": {
-    "ascii-art": "^1.5.1",
-    "inquirer": "^8.2.0",
-    "mysql2": "^2.3.0",
-    "table": "^6.8.1"
-  }
-}
+  "license": "UNLICENSED",
+    "homepage": "https://github.com/DAsh365/ElevateHR---Empower-Your-Workforce",
+    "dependencies": {
+      "ascii-art": "^2.8.5",
+      "inquirer": "^8.2.0",
+      "mysql2": "^2.3.0",
+      "table": "^6.8.1"
+    }
+ }
